--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,105 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+.container{
+width: 900px;
+margin: auto;
+}
+
+header{
+	margin: 0px 0px 50px 0px;
+}
+
+header nav{
+	display: inline-block;
+	margin-top: 35px;
+}
+
+header nav a{
+	margin: 0 30px;
+    color: gray;
+    text-decoration: none;
+    font-size: 13px;
+}
+
+header .logo{
+	margin-left: 90px;
+}
+
+.cta{
+}
+
+.ctaText{
+    display: inline-block;
+    position: absolute;
+    font-size: 70px;
+    text-align: center;
+    margin: 60px 50px 30px 100px;
+}
+
+.ctaText button{
+    box-sizing: border-box;
+    background-color: white;
+    font-size: 11px;
+    padding: 2px 15px;
+    margin: -12px -45px;
+    position: absolute;
+}
+
+.cta img{
+    display: inline-block;
+    height: 300px;
+    margin: 20px 0px 10px 500px;
+}
+
+hr{
+	display: block;
+    border: 1px solid black;
+    margin: 30px 0px;
+}
+
+.pageContent{
+}
+
+.topPageContent{
+	display: inline-block;
+    margin: 5px -20px 5px -14px;
+}
+
+.content{
+    display: inline-block;
+    padding: 8px;
+}
+
+.top{
+	width: 49%;
+    padding: 8px 8px 8px 18px;
+}
+
+.middle-img{
+	width: 890px;
+    margin: 20px 0px;
+}
+
+.bottom{
+	width: 33%
+}
+
+.contact p{
+	margin: 12px 0px;
+}
+
+.contact h4{
+	margin-top:40px;
+}
+
+footer{
+	margin-bottom:100px;
+}
+
+footer p{
+	display: inline-block;
+    position: relative;
+    width: 200px;
+    margin: 0px 400px;
+}
